Update on Overleaf.

--- a/ATE_text_only.tex
+++ b/ATE_text_only.tex
@@ -113,7 +113,7 @@ speciation, the
 potential to admix is used as a classical criterion to define  species as the concept underlying  reproductive
 isolation in the biological species concept (\cite{mayr_animal_1963}).
 
-More recently, genomic studies have widely shown that admixture is present between many well-established species that are morphological, geographical and/or behaviorally differentiated. The well-known examples include many butterflies \cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}. 
+More recently, genomic studies have widely shown that admixture is present between many well-established species that are morphological, geographical and/or behaviorally differentiated. The well-known examples include many butterflies (\cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}). 
 
 Within species, gene flow is a major evolutionary force  shaping genetic diversity, as it facilitates exchange of variants between populations
 (\cite{harrison_hybridization_2014}). Genomic methods that investigate the selective effect of such variants  are a major force of current research (\cite{hedrick_adaptive_2013},
@@ -125,17 +125,15 @@ the Neandertal (\cite{green_draft_2010}) genome revealed that all humans outside
 (\cite{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017}). In addition, the  Denisovan genome (\cite{reich_genetic_2010})
 showed low proportion of Denisovan ancestry being widespread in Oceania and to a smaller extent in East-Asia
 (\cite{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016}).
-These admixture events where found to have impacted modern human
-phenotypes (\cite{dannemann_something_2018}). One important question is
-the date and duration of such admixture events, since this can be a clue
-to the debated question of the time of extinction of these hominin
-populations.
+This genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations can also help resolving the timing and duration of contact by genetically dating the admixture.
+Moreover, additional to archaeological records of Neandertals, the admixture can hint to the time of their disappearance assumed to be at the end of the Mousterian around 41,030–39,260 calibrated years before present (yBP) (\cite{higham_timing_2014}), based on archaeological data. 
+Together, genetically dated admixture events can be a clue of the debated question of contact with and extinction of these hominin populations.
 
 \subsection{Admixture on the genomic level and basic idea how to date
 it}\label{admixture-on-the-genomic-level-and-basic-idea-how-to-date-it}
 
 On the genomic level, admixture introduces  divergent chromosomes
- into the admixed population. Over time, meiotic recombination
+into the admixed population. Over time, meiotic recombination
 progressively breaks these chromosomes down into introgressed segments, whose size decreases with time (\cite{falush_inference_2003}). 
 Assuming that recombination events are
 independent from each other, the length of these segments  is roughly inversely proportional to  the number of
@@ -146,10 +144,9 @@ Hence, using this 'recombination clock', the length distribution of introgressed
 admixture event 
 (\cite{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}).
 
-The most widely used model of gene flow is one where gene flow is constant through time (cite IMa model, Wakeley and Nielsen, or Hey and Nielsen), which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
-happens over a very short time period, in a single \textit{admixture pulse}
-(\cite{moorjani_history_2011}), usually modelled as a single generation
-of gene flow. While convenient for inference, one cannot use this approach to distinguish ongoing gene flow from an admixture pulse (\cite{pickrell_toward_2014}). Here, we are chiefly interested in gene flow between Neandertals and modern humans. Dating this gene flow event accurately would inform several questions of  great importance, but not always the same aspect of the gene flow is the one of primary ointerest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
+The most widely used model of gene flow is one where gene flow is constant through time (\cite{nielsen_distinguishing_2001,hey_multilocus_2004}), which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
+happens over a very short time period, in a single \textit{admixture pulse} (\cite{moorjani_history_2011}), usually modelled as a single generation
+of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of gene flow from an admixture pulse (\cite{pickrell_toward_2014}). Here, we are chiefly interested in gene flow between Neandertals and modern humans. Dating this gene flow event accurately would inform several questions of  great importance, but not always the same aspect of the gene flow is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
 In contrast, the date of the most recent gene flow between Neandertals and modern humans may be informative for dating the extinction of Neandertals. Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated.
 
 Thus, our goal here is to examine when an admixture pulse can be rejected for more general models of continuous gene flow.  For this purpose, we explore both technical and biological factors influencing the inferred length of admixture pulses, to gauge their relative importance.
@@ -162,14 +159,10 @@ The first step in dating admixture events from genetic data is estimating the le
 (\cite{chimusa_dating_2018}) (Figure \ref{fig:Intro_fig} A).
 
 The first approach uses the admixture-induced linkage disequilibrium
-(ALD) decay. Admixture introduces highly divergent archaic segments into
-the human background. Hence, variants on these archaic segments are
+(ALD) decay. Variants on introgressed archaic segments are
 expected to be in high linkage disequilibrium to each other at the time
 of admixture
-(\cite{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}).
-As recombination breaks the introgressed chromosomal segments apart, each
-generation, the association between variants on these introgressed
-segments decays as genetic distance increases. In case of a recent
+(\cite{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}). The extent of linkage between introgressed variants decreases over generations as genetic distance increases. Hence, in case of a recent
 admixture event a few tens of generations ago, ALD stretches  over long genetic distances
 (\cite{patterson_methods_2004}) and is therefore easily distinguishable
 from short range LD due to other processes (\cite{moorjani_history_2011}). For ancient
@@ -183,7 +176,7 @@ segments: searching for introgressed
 haplotypes}\label{the-two-approaches-of-obtaining-the-length-of-introgressed-segments-searching-for-introgressed-haplotypes}
 
 A second set of approaches works by first inferring the admixture segments
-(\cite{gravel_population_2012,price_sensitive_2009,lawson_inference_2012}). This step is largely independent from the later dating, and can be done using a variety of methods.(\cite{lawson_inference_2012,racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
+(\cite{gravel_population_2012,price_sensitive_2009}). This step is largely independent from the later dating, and can be done using a variety of methods.(\cite{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
 
 \subsection{Dates of archaic introgression obtained so
 far}\label{dates-of-archaic-introgression-obtained-so-far}
@@ -196,8 +189,8 @@ be  between 37,000--86,000 ya (years ago) (\cite{sankararaman_date_2012}). Later
 this date was refined to 40,510--54,454 ya (95\% CI) using a different
 ascertainment scheme combined with a different genetic map
 (\cite{moorjani_genetic_2016}). A date was also obtained from an ancient
-genome to be 50,000 - 60,000 ya by adding the admixture date of the
-ancient individual, obtained by the decay of pairwise covariance between
+genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the
+ancient individual, by the decay of pairwise covariance between
 introgressed SNPs, to the specimens radiocarbon date
 (\cite{fu_genome_2014}).
 
@@ -205,15 +198,14 @@ An additional admixture event between Neandertals and East-Asian
 populations at the same time as the admixture between Neandertals and
 all non-Africans was suggested to explain the higher amount of
 Neandertal ancestry in present-day East Asians
-(\cite{kim_selection_2015,vernot_complex_2015}). The Denisovan human
+(\cite{kim_selection_2015,vernot_complex_2015}). 
+
+The Denisovan human
 admixture time point was dated to lie in the interval between 44,000--54,000 ya using the ALD
 approach on modern day genomes (\cite{sankararaman_combined_2016}).
 
-Similarly, the identification of Denisovan segments private to
-Southeast-Asian population, which are more diverged from the Denisovan
-high-coverage genome then previously found segments, suggests an
-additional admixture event between these populations
-(\cite{browning_analysis_2018}). Comparing the mean length of the two groups of segments introgressed
+Direct identification of archaic segments in genomes from present day Southeast-Asians revealed a proportion of Denisovan ancestry private to these population. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \cite{browning_analysis_2018}.
+ Comparing the mean length of the two groups of segments introgressed
 from divergent Denisovan populations did, however, not reveal
 significant differences, suggesting a lack of power to distinguish the
 two events by time (\cite{browning_analysis_2018,jacobs_multiple_2019}).
@@ -221,7 +213,7 @@ Analysing genomes from Papuan individuals revealed two time separated
 admixture events with Denisovans, one in line with previous estimates at
 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
 be around 29.8 kya (95\% CI 14.4-50.4 kya)
-{[}(\cite{jacobs_multiple_2019}).
+(\cite{jacobs_multiple_2019}).
 
 \subsection{Assumptions on the data}\label{assumptions-on-the-data}
 Here, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard . Thus, we also need to carefully evaluate the potential technical and biological factors that may introduce additional biases (\cite{pool_inference_2009,gravel_population_2012,liang_lengths_2014}).
@@ -235,6 +227,8 @@ of drift is assumed to be negligible (\cite{loh_inferring_2013}), the
 introgressed segments act neutral (\cite{shchur_distribution_2019}) and
 the recombination map is identical across populations and does not
 change over time (\cite{gravel_population_2012}).
+
+The model has some general assumptions beside the one-generation pulse such as tracts are rare and inbreeding is not significant. The introgressed segments act neutral and the recombination clock is constant over time and populations. We will keep these assumptions and focus on the technical ones. It is usually assumed that the demography is known or its effects negligible, the recombination map known or recombination is constant. Beside that is is assumed that the ascertainment scheme represent the variation in the true introgressing archaic population well.
 
 Violations of these assumptions are known to influence the mean time
 estimates. Hence, the effect of assuming a one-generation pulse has to
