--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1269,3 +1269,45 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	pages = {1612--1625},
 	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/6WB6ZBXH/j.1523-1739.2007.00826.html:text/html}
 }
+
+
+@article{hey_multilocus_2004,
+	title = {Multilocus {Methods} for {Estimating} {Population} {Sizes}, {Migration} {Rates} and {Divergence} {Time}, {With} {Applications} to the {Divergence} of {Drosophila} pseudoobscura and {D}. persimilis},
+	volume = {167},
+	copyright = {Genetics Society of America},
+	issn = {0016-6731, 1943-2631},
+	url = {https://www.genetics.org/content/167/2/747},
+	doi = {10.1534/genetics.103.024182},
+	abstract = {The genetic study of diverging, closely related populations is required for basic questions on demography and speciation, as well as for biodiversity and conservation research. However, it is often unclear whether divergence is due simply to separation or whether populations have also experienced gene flow. These questions can be addressed with a full model of population separation with gene flow, by applying a Markov chain Monte Carlo method for estimating the posterior probability distribution of model parameters. We have generalized this method and made it applicable to data from multiple unlinked loci. These loci can vary in their modes of inheritance, and inheritance scalars can be implemented either as constants or as parameters to be estimated. By treating inheritance scalars as parameters it is also possible to address variation among loci in the impact via linkage of recurrent selective sweeps or background selection. These methods are applied to a large multilocus data set from Drosophila pseudoobscura and D. persimilis. The species are estimated to have diverged ∼500,000 years ago. Several loci have nonzero estimates of gene flow since the initial separation of the species, with considerable variation in gene flow estimates among loci, in both directions between the species.},
+	language = {en},
+	number = {2},
+	urldate = {2020-04-07},
+	journal = {Genetics},
+	author = {Hey, Jody and Nielsen, Rasmus},
+	month = jun,
+	year = {2004},
+	pmid = {15238526},
+	pages = {747--760},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/VLRHKGSU/Hey and Nielsen - 2004 - Multilocus Methods for Estimating Population Sizes.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/KMJI8SZY/747.html:text/html}
+}
+
+
+@article{nielsen_distinguishing_2001,
+	title = {Distinguishing {Migration} {From} {Isolation}: {A} {Markov} {Chain} {Monte} {Carlo} {Approach}},
+	volume = {158},
+	copyright = {Copyright © 2001 by the Genetics Society of America},
+	issn = {0016-6731, 1943-2631},
+	shorttitle = {Distinguishing {Migration} {From} {Isolation}},
+	url = {https://www.genetics.org/content/158/2/885},
+	abstract = {A Markov chain Monte Carlo method for estimating the relative effects of migration and isolation on genetic diversity in a pair of populations from DNA sequence data is developed and tested using simulations. The two populations are assumed to be descended from a panmictic ancestral population at some time in the past and may (or may not) after that be connected by migration. The use of a Markov chain Monte Carlo method allows the joint estimation of multiple demographic parameters in either a Bayesian or a likelihood framework. The parameters estimated include the migration rate for each population, the time since the two populations diverged from a common ancestral population, and the relative size of each of the two current populations and of the common ancestral population. The results show that even a single nonrecombining genetic locus can provide substantial power to test the hypothesis of no ongoing migration and/or to test models of symmetric migration between the two populations. The use of the method is illustrated in an application to mitochondrial DNA sequence data from a fish species: the threespine stickleback (Gasterosteus aculeatus).},
+	language = {en},
+	number = {2},
+	urldate = {2020-04-07},
+	journal = {Genetics},
+	author = {Nielsen, Rasmus and Wakeley, John},
+	month = jun,
+	year = {2001},
+	pmid = {11404349},
+	pages = {885--896},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/AB9EDC6P/Nielsen and Wakeley - 2001 - Distinguishing Migration From Isolation A Markov .pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/FG7HG6Q9/885.html:text/html}
+}
