--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1311,3 +1311,23 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	pages = {885--896},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/AB9EDC6P/Nielsen and Wakeley - 2001 - Distinguishing Migration From Isolation A Markov .pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/FG7HG6Q9/885.html:text/html}
 }
+
+
+@article{malaspinas_genomic_2016,
+	title = {A genomic history of {Aboriginal} {Australia}},
+	volume = {538},
+	copyright = {2016 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature18299},
+	doi = {10.1038/nature18299},
+	abstract = {The population history of Aboriginal Australians remains largely uncharacterized. Here we generate high-coverage genomes for 83 Aboriginal Australians (speakers of Pama–Nyungan languages) and 25 Papuans from the New Guinea Highlands. We find that Papuan and Aboriginal Australian ancestors diversified 25–40 thousand years ago (kya), suggesting pre-Holocene population structure in the ancient continent of Sahul (Australia, New Guinea and Tasmania). However, all of the studied Aboriginal Australians descend from a single founding population that differentiated {\textasciitilde}10–32 kya. We infer a population expansion in northeast Australia during the Holocene epoch (past 10,000 years) associated with limited gene flow from this region to the rest of Australia, consistent with the spread of the Pama–Nyungan languages. We estimate that Aboriginal Australians and Papuans diverged from Eurasians 51–72 kya, following a single out-of-Africa dispersal, and subsequently admixed with archaic populations. Finally, we report evidence of selection in Aboriginal Australians potentially associated with living in the desert.},
+	language = {en},
+	number = {7624},
+	urldate = {2019-07-24},
+	journal = {Nature},
+	author = {Malaspinas, Anna-Sapfo and Westaway, Michael C. and Muller, Craig and Sousa, Vitor C. and Lao, Oscar and Alves, Isabel and Bergström, Anders and Athanasiadis, Georgios and Cheng, Jade Y. and Crawford, Jacob E. and Heupink, Tim H. and Macholdt, Enrico and Peischl, Stephan and Rasmussen, Simon and Schiffels, Stephan and Subramanian, Sankar and Wright, Joanne L. and Albrechtsen, Anders and Barbieri, Chiara and Dupanloup, Isabelle and Eriksson, Anders and Margaryan, Ashot and Moltke, Ida and Pugach, Irina and Korneliussen, Thorfinn S. and Levkivskyi, Ivan P. and Moreno-Mayar, J. Víctor and Ni, Shengyu and Racimo, Fernando and Sikora, Martin and Xue, Yali and Aghakhanian, Farhang A. and Brucato, Nicolas and Brunak, Søren and Campos, Paula F. and Clark, Warren and Ellingvåg, Sturla and Fourmile, Gudjugudju and Gerbault, Pascale and Injie, Darren and Koki, George and Leavesley, Matthew and Logan, Betty and Lynch, Aubrey and Matisoo-Smith, Elizabeth A. and McAllister, Peter J. and Mentzer, Alexander J. and Metspalu, Mait and Migliano, Andrea B. and Murgha, Les and Phipps, Maude E. and Pomat, William and Reynolds, Doc and Ricaut, Francois-Xavier and Siba, Peter and Thomas, Mark G. and Wales, Thomas and Wall, Colleen Ma’run and Oppenheimer, Stephen J. and Tyler-Smith, Chris and Durbin, Richard and Dortch, Joe and Manica, Andrea and Schierup, Mikkel H. and Foley, Robert A. and Lahr, Marta Mirazón and Bowern, Claire and Wall, Jeffrey D. and Mailund, Thomas and Stoneking, Mark and Nielsen, Rasmus and Sandhu, Manjinder S. and Excoffier, Laurent and Lambert, David M. and Willerslev, Eske},
+	month = oct,
+	year = {2016},
+	pages = {207--214},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/GNN6PZAK/Malaspinas et al. - 2016 - A genomic history of Aboriginal Australia.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/6BUSHIRT/nature18299.html:text/html}
+}
